<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black_SP"
    android:orientation="vertical"
    android:gravity="fill_vertical">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/music_logo"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_for_everyone"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:textColorHint="@color/suva_gray"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:background="@color/gray"
        android:textColor="@color/white"
        android:padding="15dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        android:textColorHint="@color/suva_gray"
        app:passwordToggleTint="@color/suva_gray">

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:textColor="@color/white"
        android:background="@color/gray"
        android:padding="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/login"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_not_have_an_account"
        android:textColor="@color/suva_gray"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal|bottom" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal|bottom" />







</LinearLayout>