<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_music"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".presentation.main.MusicFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/ivLogOut"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/logout"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/playing_from_your_library"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/ivSong"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:scaleType="centerCrop"
        android:src="@drawable/vince" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="90dp"/>

    <TextView
        android:id="@+id/tvSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/riptide"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tvSinger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/vance_joy"
        android:textColor="@color/suva_gray"
        android:textSize="15sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/sbSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:progressBackgroundTint="@color/dark_suva_gray"
        android:thumbTint="@color/white"
        android:progressTint="@color/suva_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <TextView
            android:id="@+id/tvStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/start_time"
            android:textColor="@color/suva_gray" />

        <TextView
            android:id="@+id/tvEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="@string/end_time"
            android:textColor="@color/suva_gray" />

        <ImageView
            android:id="@+id/ivStart"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@+id/tvStartTime"
            android:src="@drawable/play_button"
            android:layout_centerHorizontal="true"
            android:tag="play_button"
            />

        <ImageView
            android:id="@+id/ivBackSecond"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/tvEndTime"
            android:layout_alignParentBottom="true"
            android:src="@drawable/back_second"
            app:tint="@color/suva_gray" />

        <ImageView
            android:id="@+id/ivBackPlay"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@+id/tvEndTime"
            android:src="@drawable/back"
            android:layout_toStartOf="@+id/ivStart"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="30dp"
            />

        <ImageView
            android:id="@+id/ivForwardPlay"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_below="@+id/tvEndTime"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/ivStart"
            android:src="@drawable/forward"

            />

        <ImageView
            android:id="@+id/ivForwardSecond"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@+id/tvEndTime"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/forward_second"
            app:tint="@color/suva_gray"
            />


    </RelativeLayout>


</LinearLayout>